--- a/subscriber-thanks.html
+++ b/subscriber-thanks.html
@@ -45,16 +45,17 @@
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" style="background: #f5f5f5">
 
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden"
+  <nav
+    class="font-sans bg-white text-center flex md:flex-row flex-col justify-center md:justify-between p-4 container overflow-hidden"
     style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); max-width: 100%; position: fixed; top: 0; z-index: 100; ">
 
-    <a href="https://trendydots.com" class="block text-left" target="_blank"
+    <a href="https://trendydots.com" class="block text-center" target="_blank"
       style="font-size: 1.35rem; text-decoration: none; color: black">
       <img src="./logo.png" style="vertical-align: middle; height: 1.6em;" alt="logo">
       <b> trendy dots</b>
     </a>
 
-    <div>
+    <div class="flex">
       <b style="line-height: 2em"> Thank you for subscribing to the trendy dots </b>
 
       <!-- 
