--- a/invest/project.html
+++ b/invest/project.html
@@ -56,11 +56,9 @@
     </span>
 
     <div>
-      <!-- 
       <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
         data-aos="fade-in">Become a
         Patron!</a>
-        -->
     </div>
 
     <ul class="text-sm text-grey-dark list-reset flex items-center">
@@ -72,11 +70,11 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    
+    -->
       <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
-        Sign Up
+        Contact
       </a>
-      -->
+
     </ul>
   </nav>
   <section style="margin-top:5em"
@@ -128,13 +126,24 @@
       <p class="">
         As we are working hard to achieve a great quality platform, we need
         your expert opinion. Subscribing to the news means you will receive
-        emails with our progress and surveys where you can offer feedback. You
+        emails with our progress and surveys where you can offer feedback. Be among the first patreon users to watch all
+        training videos. Becoming a parteon means you
         are automatically included in the early platform adopter program and
         have a chance to be selected for the beta testing session.
       </p>
+      <br>
+      <div class="w-full text-center">
+        <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
+          data-aos="fade-in">Become a
+          Patron!</a>
+      </div>
+      <br>
       <!-- New form -->
       <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
         action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" data-aos="fade-up">
+        <div class="w-full text-center"> Not convinced? Stay in touch with our progress. Register to our newsletter
+        </div>
+        <br>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="firstname" name="firstname"
             type="text" required style="height: 5em;" />
@@ -182,6 +191,8 @@
           </span>
         </div>
       </form>
+
+
     </div>
   </section>
 
