--- a/datajournalism/project.html
+++ b/datajournalism/project.html
@@ -55,11 +55,11 @@
       </b>
     </span>
     <div>
-      <!-- 
+
       <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
         data-aos="fade-in">Become a
         Patron!</a>
-        -->
+
     </div>
     <ul class="text-sm text-grey-dark list-reset flex items-center">
       <li> &nbsp;</li>
@@ -69,7 +69,9 @@
   <section class="font-sans container m-auto text-center py-8" style="margin-top: 64px">
     <h1 class="mt-2 mb-4 font-medium ">Computer assisted story discovery</h1>
     <h2 class="mt-2 mb-4 font-medium ">now part of <a href="https://trendydots.com/invest/project"><img
-          src="./assets/img/tdmresearch.png" style="height: 1.6em;vertical-align: middle;"> </a> </h2>
+          src="./assets/img/tdmresearch.png"
+          style="height: 1.6em;vertical-align: middle; border-radius: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+      </a> </h2>
   </section>
 
   <section
@@ -150,18 +152,18 @@
       <br>
       <br>
       <br>
-      <!-- 
+
       <div class="w-full text-center justify-center flex flex-col lg:flex-row">
         <p style="line-height: 2em"> Support us in building a modern, easy to use, high quality platform &nbsp;</p>
         <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
           data-aos="fade-in">Become a
           Patron!</a>
       </div>
-      
+
       <br>
       <br>
       <br>
-      -->
+
       <div style="font-size:12px; text-align: center">
         by clicking on any of the website buttons this information you agree to our
         <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
