--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -344,8 +344,15 @@
     <div class="gwd-div-9729 gwd-div-1521">
       <p class="gwd-p-6mvh">under <br /> construction</p>
       <p class="gwd-p-1em6">
+
+        <br>
+        <br>
+        <br>
+
         <span class="gwd-span-1nog">
+          <a href="./project.html">business case</a>
         </span>
+
         <br>
       </p>
     </div>
