--- a/index.html
+++ b/index.html
@@ -344,9 +344,14 @@
     <div class="gwd-div-9729 gwd-div-1521">
       <p class="gwd-p-6mvh">under <br /> construction</p>
       <p class="gwd-p-1em6">
-        <span class="gwd-span-1nog">
-        </span>
+
         <br>
+        <br>
+        <br>
+
+        <span class="gwd-span-1nog">
+          <a href="./project.html">business case</a>
+        </span>
       </p>
     </div>
   </div>
