--- a/project.html
+++ b/project.html
@@ -64,21 +64,23 @@
       <div style="height: 50px" class="hidden md:block"></div>
     </div>
     <div class="w-full md:w-1/2">
-      <img src="https://trendydots.com/1.png" alt="" />
+      <img src="./1.png" alt="" />
     </div>
   </section>
 
-  <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 10%">
+  <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 7%">
     <div class="flex flex-col sm:flex-row flex-wrap my-8 items-center justify-center">
       <div style=" z-index: 3;"
         class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md bg-black text-white text-left text-sm ">
+
         <br><br>
-        <h3 class="mt-4 px-6">Social Informatics</h3>
-        <p class="mt-2 leading-normal px-6">Discovering internet behaviour</p>
+        <h3 class="mt-4 px-6">Frontend development</h3>
+        <p class="mt-2 leading-normal px-6">Taylormade experiences for your clients. Bridging the gap between data and
+          good UX</p>
         <br><br>
-        <h3 class="mt-4 px-6">Data Visualisation</h3>
-        <p class="mt-2 leading-normal px-6">Part of our exploratory data analysis practice. Analise
-          collective interest through innovative techniques.</p>
+        <h3 class="mt-4 px-6">Exploratory Data Analysis</h3>
+        <p class="mt-2 leading-normal px-6">Looking at how data evolves over time. Infering meaningful association of
+          data trends</p>
         <br><br><br><br>
       </div>
 
@@ -89,7 +91,7 @@
   <section class="font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between">
 
     <div class="w-full md:w-1/2">
-      <img src="https://trendydots.com/2.png" alt="" />
+      <img src="./2.png" alt="" />
     </div>
     <div class="w-full md:w-1/2 flex flex-col justify-between items-start items-center md:items-start bg-white" style="z-index: 2; padding: 2%; padding-left: 6%; padding-right: 6%; box-shadow: rgba(0, 0, 0, 0.2) 0 1.5em 85px 0;
       ">
@@ -115,18 +117,21 @@
     </div>
   </section>
 
-  <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 10%">
+  <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 7%">
     <div class="flex flex-col sm:flex-row flex-wrap my-8 items-center justify-center">
       <div style=" z-index: 3;"
         class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md bg-black text-white text-left text-sm ">
         <br><br>
-        <h3 class="mt-4 px-6">Frontend development</h3>
-        <p class="mt-2 leading-normal px-6">Taylormade experiences for your clients. Bridging the gap between data and
-          good UX</p>
+        <h3 class="mt-4 px-6">Early Stage Prototyping</h3>
+        <p class="mt-2 leading-normal px-6">Bringing ideas to like. We develop your ideas into proofs of concept and
+          MVPs</p>
         <br><br>
-        <h3 class="mt-4 px-6">Trend & Correlation Analysis</h3>
-        <p class="mt-2 leading-normal px-6">Looking at how data evolves over time. Infering meaningful association of
-          data trends</p>
+        <h3 class="mt-4 px-6">Web Development</h3>
+        <p class="mt-2 leading-normal px-6">Turning MVPs into products that scale.</p>
+        <br><br>
+        <h3 class="mt-4 px-6">Data Visualisation & Analysis</h3>
+        <p class="mt-2 leading-normal px-6">Part of our exploratory data analysis practice. Analise
+          collective interest through innovative techniques.</p>
         <br><br><br><br>
       </div>
 
@@ -203,7 +208,7 @@
 
   <section class="font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between">
     <div class="w-full md:w-1/2">
-      <img src="https://trendydots.com/3.png" alt="" />
+      <img src="./3.png" alt="" />
     </div>
     <div class="w-full md:w-1/2">
     </div>
@@ -273,7 +278,7 @@
     <div class="w-full md:w-1/2">
     </div>
     <div class="w-full md:w-1/2">
-      <img src="https://trendydots.com/4.png" alt="" />
+      <img src="./4.png" alt="" />
     </div>
   </section>
 
@@ -291,9 +296,6 @@
             service</a>
         </li>
       </ul>
-      <p class="inline-block py-2 px-3 ">image credit:
-        <a href="https://dribbble.com/Octopus" target="_blank" style="color:#000">Octopus</a>
-      </p>
     </div>
   </footer>
 
