--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -64,8 +64,8 @@
     </div>
 
     <ul class="text-sm text-grey-dark list-reset flex items-center">
-      <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
-        Contact
+      <a href="#about" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
+        About the project
       </a>
     </ul>
   </nav>
@@ -130,7 +130,7 @@
 
 
 
-  <footer class="font-sans bg-white py-8 px-4" style="
+  <footer id="about" class="font-sans bg-white py-8 px-4" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
     <div
       class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
