--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -79,9 +79,10 @@
       ratio is less than 60%. If you are interested in our research, please visit our Patreon page.
     </p>
     <h3 class="mt-2 max-w-full m-auto text-2xl md:text-3xl lg:text-4xl font-medium">
-      Input your text here</h3>
+      Summarize any text
+    </h3>
     <div class="mt-1 lg:mt-2 max-w-lg w-full leading-loose mb-2 text-left">
-      <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left"> Title </p>
+      <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left"> Title (optional)</p>
       <input id="titleInput" type="text"
         style="width: 100%; border: 1px solid #E0E0E0; padding:10px; border-radius: 6px; box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;"></input>
     </div>
