added how its made section

--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -64,6 +64,7 @@
     </div>
 
     <ul class="text-sm text-grey-dark list-reset flex items-center">
+      <div style="display: inline-block; width:12em"> </div>
       <!-- 
       <a href="#about" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
         About us
@@ -98,7 +99,6 @@
         Summarize
       </button>
     </div>
-
   </section>
 
   <section id="loading" class="font-sans container m-auto flex flex-col max-w-xl text-center px-6">
@@ -152,6 +152,28 @@
     </p>
   </section>
 
+  <section class="font-sans container m-auto flex flex-col py-2 max-w-xl text-center px-6 items-center"
+    style="margin-top:5em">
+    <h1> How it's made </h1>
+    <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
+      The simple answer is: with passion and cofee ;) It's often that I try doing pieces of software in the process of
+      learning new things. NLP is a newly found interest and since I like to build web applications, I thought this is a
+      good way to share some of my experiments with you.
+      The summarizer has a statistical machine at its core. It weighs the sentences throughout the text and selects the
+      'heaviest' ones. Once these are marked, a summary text is stitched together and out comes the final result.
+    </p>
+    <img src="../assets/img/donate.png" alt="" class=" max-w-lg m-auto">
+    <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
+      <i> I hope you don't mid me giving you the opportunity to donate. It will help me keep a good quality software
+        while
+        making it free for as many users possible. Great many thanks if you decide to become a patron.
+      </i>
+      <div src="" alt=""
+        style="border-radius: 50%; background: url(../assets/img/cris.jpg) center no-repeat; background-size: cover; width:80px; height: 80px; ">
+      </div>
+      <img src="../assets/img/cristian.png" alt="" style="height: 3em">
+    </p>
+  </section>
 
   <footer id="about" class="font-sans bg-white py-8 px-4" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
