--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -41,7 +41,9 @@
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
 
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
+  <nav
+    class="font-sans bg-white text-center flex md:justify-between items-center p-4 container overflow-hidden flex-col md:flex-row"
+    style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
 ">
@@ -57,7 +59,7 @@
       </b>
     </span>
 
-    <div>
+    <div class="flex">
       <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
         data-aos="fade-in">Become a
         Patron!</a>
@@ -162,16 +164,16 @@
       The summarizer has a statistical machine at its core. It weighs the sentences throughout the text and selects the
       'heaviest' ones. Once these are marked, a summary text is stitched together and out comes the final result.
     </p>
-    <img src="../assets/img/donate.png" alt="" class=" max-w-lg m-auto">
+    <img src="../assets/img/donate.png" alt="" class="m-auto flex">
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
       <i> I hope you don't mid me giving you the opportunity to donate. It will help me keep a good quality software
         while
         making it free for as many users possible. Great many thanks if you decide to become a patron.
       </i>
       <div src="" alt=""
-        style="border-radius: 50%; background: url(../assets/img/cris.jpg) center no-repeat; background-size: cover; width:80px; height: 80px; ">
+        style="border-radius: 50%; background: url(../assets/img/cris.jpg) center no-repeat; background-size: cover; width:70px; height: 70px; ">
       </div>
-      <img src="../assets/img/cristian.png" alt="" style="height: 3em">
+      <img src="../assets/img/cristian.png" alt="" style="height: 2.5em">
     </p>
   </section>
 
