--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -78,7 +78,8 @@
   <section class="font-sans container m-auto flex flex-col py-2 max-w-xl text-center px-6 items-center"
     style="margin-top:5em">
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
-      In this experiment I aim to summarize a large text into a small paragraph. The experiment succeeds if the summary
+      With this new experimental tool I aim to summarize a large text into a small paragraph. The experiment succeeds if
+      the summary
       ratio is less than 60%. If you are interested in our research, please visit our Patreon page.
     </p>
     <h3 class="mt-2 max-w-full m-auto text-2xl md:text-3xl lg:text-4xl font-medium">
