--- a/research/index.html
+++ b/research/index.html
@@ -39,7 +39,9 @@
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
+  <nav
+    class="font-sans bg-white text-center flex md:justify-between items-center p-4 container overflow-hidden flex-col md:flex-row"
+    style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
 ">
@@ -55,7 +57,7 @@
       </b>
     </span>
 
-    <div>
+    <div class="flex">
       <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
         data-aos="fade-in">Become a
         Patron!</a>
