--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -167,7 +167,8 @@
     </p>
     <img src="../assets/img/donate.png" alt="" class="m-auto flex">
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
-      <i> I hope you don't mid me giving you the opportunity to donate. It will help me keep a good quality software
+      <i> This experiment is a 'donation enabled freemium'. I hope you don't mid me giving you the opportunity to
+        donate. It will help me keep a good quality software
         while
         making it free for as many users possible. Great many thanks if you decide to become a patron.
       </i>
