--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
         <h1 class="my-4 font-normal" style="font-weight: 700;
       font-size: 10vh;">our story</h1>
         <p class="leading-normal mb-4">
-          Trendy Dots is an ambitious project making trend and exploratory data analysis on the new and old markets. We
+          Trendy Dots is a hobby project making trend and exploratory data analysis on the new and old markets. We
           aim to model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
           innovative AI algorithms.
         </p>
@@ -70,12 +70,12 @@
 
   <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 7%">
     <div class="flex flex-col sm:flex-row flex-wrap my-8 items-center justify-center">
-      <div style=" z-index: 3;"
-        class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md bg-black text-white text-left text-sm ">
+      <div style=" z-index: 3; background: #424242;"
+        class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md text-white text-left text-sm ">
 
         <br><br>
-        <h3 class="mt-4 px-6">Frontend development</h3>
-        <p class="mt-2 leading-normal px-6">Taylormade experiences for your clients. Bridging the gap between data and
+        <h3 class="mt-4 px-6">Web experiments</h3>
+        <p class="mt-2 leading-normal px-6">Bridging the gap between big ideas, open data and
           good UX</p>
         <br><br>
         <h3 class="mt-4 px-6">Exploratory Data Analysis</h3>
@@ -91,7 +91,7 @@
   <section class="font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between">
 
     <div class="w-full md:w-1/2">
-      <img src="./2.png" alt="" />
+      <img src="./3.png" alt="" />
     </div>
     <div class="w-full md:w-1/2 flex flex-col justify-between items-start items-center md:items-start bg-white" style="z-index: 2; padding: 2%; padding-left: 6%; padding-right: 6%; box-shadow: rgba(0, 0, 0, 0.2) 0 1.5em 85px 0;
       ">
@@ -102,8 +102,9 @@
         <h1 class="my-4 font-normal" style="font-weight: 700;
       font-size: 10vh;">what we do</h1>
         <p class="leading-normal mb-4">
-          We apply UX and data science best practices to big data, aimig to produce highly valuable knowledge. We
-          produce user interfaces that tell stories with data.
+          We playfully apply UX and data science best practices to big data, aimig to produce highly valuable knowledge.
+          We
+          produce user interfaces that tell stories with data. We have lots of fun doing this.
         </p>
       </div>
       <br>
@@ -119,20 +120,29 @@
 
   <section class="font-sans container m-auto max-w-xl" style="margin-top: -10%; margin-bottom: 7%">
     <div class="flex flex-col sm:flex-row flex-wrap my-8 items-center justify-center">
-      <div style=" z-index: 3;"
-        class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md bg-black text-white text-left text-sm ">
+      <div style=" z-index: 3; background: #424242;"
+        class="w-full p-8 sm:w-1/2 md:w-1/3 flex flex-col items-left shadow-md text-white text-left text-sm ">
         <br><br>
-        <h3 class="mt-4 px-6">Early Stage Prototyping</h3>
-        <p class="mt-2 leading-normal px-6">Bringing ideas to like. We develop your ideas into proofs of concept and
+        <h3 class="mt-4 px-6"><i> A big idea </i> - Early Stage Prototyping</h3>
+        <p class="mt-2 leading-normal px-6"> We brainstorm for ideas, challenge ourselves with building proofs of
+          concept and
           MVPs</p>
         <br><br>
-        <h3 class="mt-4 px-6">Web Development</h3>
+        <h3 class="mt-4 px-6"> <i> Will it work online?</i> - Web Development</h3>
         <p class="mt-2 leading-normal px-6">Turning MVPs into products that scale.</p>
         <br><br>
-        <h3 class="mt-4 px-6">Data Visualisation & Analysis</h3>
+        <h3 class="mt-4 px-6"><i> What can be improved?</i> - Data Visualisation & Analysis</h3>
         <p class="mt-2 leading-normal px-6">Part of our exploratory data analysis practice. Analise
           collective interest through innovative techniques.</p>
-        <br><br><br><br>
+        <br><br>
+        <div class="w-full mt-4 px-6 text-center">
+          <p> Support our project on Patreon</p>
+          <br>
+          <a href="https://www.patreon.com/tdmresearch" target="_blank">
+            <img src="./patreon.png" alt="" style="height: 4.5em; border-radius: 50%;">
+          </a>
+        </div>
+        <br><br>
       </div>
 
     </div>
@@ -205,7 +215,7 @@
   </section>
 
 
-
+  <!-- 
   <section class="font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between">
     <div class="w-full md:w-1/2">
       <img src="./3.png" alt="" />
@@ -213,8 +223,9 @@
     <div class="w-full md:w-1/2">
     </div>
   </section>
-
+-->
   <!-- Contact us -->
+  <!--
   <section class="font-sans w-full md:w2/3" style="margin-top: -20%; margin-bottom: -20%">
     <div class="flex flex-col sm:flex-row flex-wrap my-8 items-center justify-center">
       <div class="p-8 w-full md:w-1/2 flex flex-col items-left bg-white text-left"
@@ -273,7 +284,8 @@
 
     </div>
   </section>
-
+-->
+  <!--
   <section class="font-sans w-full flex flex-col md:flex-row text-center md:text-left justify-between">
     <div class="w-full md:w-1/2">
     </div>
@@ -281,7 +293,7 @@
       <img src="./4.png" alt="" />
     </div>
   </section>
-
+ -->
   <footer class="font-sans bg-white py-8 px-4" style="z-index: 4">
     <div class="mx-auto max-w-xl overflow-hidden flex justify-between items-center">
       <p class="inline-block py-2 px-3 "> ©2019 <strong class="">trendydots.com</strong> All rights reserved.</p>
