updated with nlp link

--- a/invest/project.html
+++ b/invest/project.html
@@ -79,11 +79,10 @@
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" data-aos="fade-right">
+    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
       <img src="./assets/img/in0.png" alt="" />
     </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      data-aos="fade-left">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
         Information empowers good decisions.
       </h1>
@@ -98,8 +97,7 @@
 
   <section
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      data-aos="fade-right" data-aos-delay="300">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
         Standard reporting containing insights into company shares, indices, commodities,
         cryptocurrencies and world events.
@@ -114,10 +112,11 @@
         and interest in the events, companies, currencies, etc. you set.
       </p>
     </div>
-    <div class="w-full lg:w-1/2" data-aos="fade-left" data-aos-delay="300">
+    <div class="w-full lg:w-1/2">
       <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" />
     </div>
   </section>
+
 
   <!-- Form -->
   <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
@@ -193,6 +192,28 @@
       </form>
 
 
+    </div>
+  </section>
+
+
+  <section style="margin-top:5em"
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+      <img src="./assets/img/inE1.png" alt="" />
+    </div>
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+      <h1 class="my-4 font-normal text-grey-darker">
+        NEW! Try out our summarisation tool for free
+      </h1>
+      <br />
+      <p class="leading-normal mb-4 ">
+        With this new experimental tool we aim to summarize a large text into a small paragraph. The experiment succeeds
+        if the summary ratio is less than 60%. If you are interested in our research, please visit our Patreon page.
+      </p>
+      <a href="/research/nlp/" id="summarizeBtn" class="hover:bg-grey-lighter no-underline" target="_blank"
+        style="text-align: center; border: 2px solid black; padding: 1em; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+        Try for free
+      </a>
     </div>
   </section>
 
