--- a/research/index.html
+++ b/research/index.html
@@ -81,11 +81,10 @@
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" data-aos="fade-right">
-      <img src="./assets/img/in0.png" alt="" />
+    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+      <img src="./assets/img/in0.png" alt="" data-aos="fade-in" />
     </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      data-aos="fade-left">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
         Information empowers good decisions.
       </h1>
@@ -100,8 +99,7 @@
 
   <section
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      data-aos="fade-right" data-aos-delay="300">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
         Standard reporting containing insights into company shares, indices, commodities,
         cryptocurrencies and world events.
@@ -116,8 +114,8 @@
         and interest in the events, companies, currencies, etc. you set.
       </p>
     </div>
-    <div class="w-full lg:w-1/2" data-aos="fade-left" data-aos-delay="300">
-      <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" />
+    <div class="w-full lg:w-1/2">
+      <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" data-aos="fade-in" />
     </div>
   </section>
 
