--- a/invest/project.html
+++ b/invest/project.html
@@ -39,7 +39,9 @@
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
   data-aos="fade-in">
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
+  <nav
+    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col p-4 container overflow-hidden"
+    style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
 ">
@@ -55,14 +57,15 @@
       </b>
     </span>
 
-    <div>
+    <div class="flex">
       <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
         data-aos="fade-in">Become a
         Patron!</a>
     </div>
 
+    <!-- 
     <ul class="text-sm text-grey-dark list-reset flex items-center">
-      <!-- 
+      
       <li>
         <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
       </li>
@@ -70,12 +73,13 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    -->
+   
       <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
         Contact
       </a>
 
     </ul>
+     -->
   </nav>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
@@ -124,11 +128,10 @@
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
-        your expert opinion. Subscribing to the news means you will receive
-        emails with our progress and surveys where you can offer feedback. Be among the first patreon users to watch all
-        training videos. Becoming a parteon means you
-        are automatically included in the early platform adopter program and
-        have a chance to be selected for the beta testing session.
+        your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
+        you first access to our donation enabled freemium experiments.
+        Being an Innovator or Angel patreon means you are automatically included in the early platform adopter program
+        and you get to: use the platform, offer feedback, have access to all training videos and so much more.
       </p>
       <br>
       <div class="w-full text-center">
@@ -137,7 +140,7 @@
           Patron!</a>
       </div>
       <br>
-      <!-- New form -->
+      <!-- New form 
       <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
         action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" data-aos="fade-up">
         <div class="w-full text-center"> Not convinced? Stay in touch with our progress. Register to our newsletter
@@ -191,7 +194,7 @@
         </div>
       </form>
 
-
+          -->
     </div>
   </section>
 
