--- a/invest/project.html
+++ b/invest/project.html
@@ -130,7 +130,7 @@
         As we are working hard to achieve a great quality platform, we need
         your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
         you first access to our donation enabled freemium experiments.
-        Being an Innovator or Angel patreon means you are automatically included in the early platform adopter program
+        Being an Innovator or Angel patron means you are automatically included in the early platform adopter program
         and you get to: use the platform, offer feedback, have access to all training videos and so much more.
       </p>
       <br>
