--- a/invest/project.html
+++ b/invest/project.html
@@ -9,7 +9,7 @@
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
     integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp crossorigin="anonymous">
-  <title>trendy dots - market research</title>
+  <title>trendy dots - research</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
   <link rel="stylesheet" href="./assets/css/aos.css" />
 
@@ -51,8 +51,7 @@
       </a>
       &nbsp;
       <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        market
-        <span style="color: #FFCA28; display: inline; text-indent: 0.2em">research
+        <span style="color: #606f7b; display: inline; text-indent: 0.2em">research
         </span>
       </b>
     </span>
@@ -90,8 +89,10 @@
       <h1 class="my-4 font-normal text-grey-darker">
         Information empowers good decisions.
       </h1>
-      <br />
       <p class="leading-normal mb-4 ">
+        An ambitious project aiming to make story discovery as easy as possible. When you are starting your article,
+        data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
+        <br> <br>
         We offer an intuitive, easy to use way for getting informed about the
         things that matter. When you are investing in equity, getting news
         about the companies and products you own is essential.
