--- a/invest/project.html
+++ b/invest/project.html
@@ -94,8 +94,7 @@
         data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
         <br> <br>
         We offer an intuitive, easy to use way for getting informed about the
-        things that matter. When you are investing in equity, getting news
-        about the companies and products you own is essential.
+        things that matter.
       </p>
     </div>
   </section>
