--- a/research/nlp/index.html
+++ b/research/nlp/index.html
@@ -168,9 +168,9 @@
     <img src="../assets/img/donate.png" alt="" class="m-auto flex">
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-2 text-left">
       <i> This experiment is a 'donation enabled freemium'. I hope you don't mid me giving you the opportunity to
-        donate. It will help me keep a good quality software
+        donate. It will help me improve the software quality
         while
-        making it free for as many users possible. Great many thanks if you decide to become a patron.
+        keeping it free for as many users possible. Great many thanks if you decide to become a patron.
       </i>
       <div src="" alt=""
         style="border-radius: 50%; background: url(../assets/img/cris.jpg) center no-repeat; background-size: cover; width:70px; height: 70px; ">
